public/styles/home.css
/* ... */
/* Hide scrollbar for Chrome, Safari and Opera */
body::-webkit-scrollbar {
  display: none;
}

/* Hide scrollbar for IE, Edge and Firefox */
body {
  -ms-overflow-style: none;  /* IE and Edge */
  scrollbar-width: none;  /* Firefox */
}



/* @font-face {
  font-family: 'PicNic';
  src: url('../public/assets/fonts/webfonts/PicNic-Regular.woff') format('woff');
  font-weight: 400;
  font-style: normal;
  } */

  @font-face {
font-family: 'PicNicc';
    src: url('../assets/fonts/otf/PicNic-Regular.otf');
    /* src: url('../asset/OpenSans/OpenSans-Medium.ttf'); */
    /* font-weight: 400;
    font-style: normal; */
    }

    @font-face {
      font-family: 'PicNic';
          src: url('../assets/fonts/webfonts/PicNic-Regular.woff');
          /* src: url('../asset/OpenSans/OpenSans-Medium.ttf'); */
          /* font-weight: 400;
          font-style: normal; */
          }

  @font-face {
    font-family: 'IBMPlexMono';
    src: url('../public/assets/fonts/webfonts/IBMPlexMono-Regular.ttf');
    /* src: url('../asset/OpenSans/OpenSans-Medium.ttf'); */
    font-weight: normal;
    font-style:normal;
    }

    @font-face {
      font-family: 'Hermes-Bold';
      src: url('../public/assets/fonts/webfonts/Hermes-Bold.otf');
      /* src: url('../asset/OpenSans/OpenSans-Medium.ttf'); */
      font-weight: 100;
      font-style:normal;
      }

      @font-face {
        font-family: 'Helvetica Neue';
        src: url("../public/assets/fonts/webfonts/HelveticaNeue.ttf") ;
        /* font-weight: 300; */
        font-style: normal;
        font-display: swap;
      }

      @font-face {
        font-family: 'Helveticalight';
        src: url("../public/assets/fonts/webfonts/HelveticaNeueLight.ttf") ;
        /* font-weight: 300; */
        font-style: normal;
        font-display: swap;
      }
  
  



html {
    font-size: 100%;
    box-sizing: border-box;
    
}

* , * ::before, * ::after {
box-sizing: inherit;

}


html,
body {
  font-family: Arial, Helvetica, sans-serif;
  line-height: 1.2;
  padding: 0;
  margin: 0;
  min-height: 100vh;
  /* color: hsl(0, 0%, 6%); */
  color: #000dff;
  overflow-y: hidden;
  /* overflow-x: hidden; */
  cursor: url("cur.png"), url("cur.cur"), default;
  cursor: url(cur.png), auto;
  /* font-family: 'IBMPlexMono';  */
    background: #00002C;
    transition: all 0.75s ease-in-out;
    transition: opacity 0.35s, padding-left 0.75s;
    animation: fadein 2s;
    -moz-animation: fadein 2s; /* Firefox */
    -webkit-animation: fadein 2s; /* Safari and Chrome */
    -o-animation: fadein 2s; /* Opera */
    background: radial-gradient(circle at center , #535353bf 0,#271d7cde 20%,#00002c, #050567 100%);
}

a{
  cursor: url("cur.png"), url("cur.cur"), default;
  cursor: url(cur.png), auto;
}


h1 {
	margin-top: 0;
	font-size: 2rem;
	line-height: 1;
}

a {
  color: inherit;
  text-decoration: none;
}


section{
  transition: margin-top 0.75s ease-in-out;
  min-height: calc(2vh - .25vw);
  width: 99vw;
  transition: all 0.75s ease-in-out;
}

* {
  box-sizing: border-box;
}

  @keyframes fadein {
    from {
        opacity:0;
    }
    to {
        opacity:1;
    }
}
@-moz-keyframes fadein { /* Firefox */
    from {
        opacity:0;
    }
    to {
        opacity:1;
    }
}
@-webkit-keyframes fadein { /* Safari and Chrome */
    from {
        opacity:0;
    }
    to {
        opacity:1;
    }
}
@-o-keyframes fadein { /* Opera */
    from {
        opacity:0;
    }
    to {
        opacity: 1;
    }
}



select:focus {
  background-position:
    calc(100% - 15px) 1em,
    calc(100% - 20px) 1em,
    calc(100% - .5em) .5em;
  background-size:
    5px 5px,
    5px 5px,
    1.5em 1.5em;
  background-repeat: no-repeat;
  border-color: rgba(0, 128, 0, 0);
  outline: 0;
}

select:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}


    /* ---------sub menu mobile*/
select {
  width: 80vw;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
  background-color: #ff7f5000;
  border: #00ffff00;
  color: rgb(10, 199, 39);
  font-size: 4.6vw;
  backdrop-filter: blur(4px);
  background: #2020643b;
}

option {
  border: solid 1px #DDDDDD;
}











/* Start----------------------------------------------------------------------------------------------------------------- */

  /* background-image: url(../public/assets/images/backgroundmobile.png); */
/* .containersoon{
  background-repeat: no-repeat;
  background-size: contain;
    background-image: url(soon.png);
} */



  .musicinfo {
    display: none;
}


.container {
  padding-top: 1rem;
  /* margin: 1rem; */
}

.main {
  min-height: 100vh;
  justify-content: center;
  align-items: center;
}


/* .mainsoon {
  min-height: 100vh;
  justify-content: center;
  align-items: center;
  background-repeat: no-repeat;
    background-size: contain;
      background-image: url(soon.png);
} */






/* --------------- Top header */


.header {
  position: fixed;
  width: 100%;
  top: 0;
  padding: var(--s-10);
  z-index: 10;
  padding-top: var(--s-20);
  font-family: 'IBMPlexMono'; 
  /* background-color: #658A2A; */
  /* border-bottom: 3px solid #0505c8; */
}


.wrapperHeader {
    float: right;
    width: 100%;
}

.containerHeader {
  text-transform: uppercase;
  display: -webkit-flex;
    -webkit-flex-wrap: wrap;
    /* mix-blend-mode: difference; */
    font-size: var(  --exx-small-font);
    /* color: #b3b3b3; */
    flex-wrap: wrap;
    font-weight: lighter;
    float: right;
    /* filter: drop-shadow(0 0 0.75rem #000000); */

   
}

.fieldtext {
  padding-right: .5rem;
  /* filter: drop-shadow(0 0 0.75rem #000000); */
  padding-bottom: var( --bot-spaceing);
}

.containermobile{
  display: none;
  overflow: scroll !important;
}


.header {
  position: fixed;
  width: 100%;
  top: 0;
  left: 0;
  padding: var(--s-10);
  z-index: 105;
  font-size: 10px;
  /* background-color: rgba(0,0,255,0.65); */
  /* mix-blend-mode: multiply; */
  /* mix-blend-mode: exclusion; */
}
/* ... */

